[tool.poetry]
name = "oakx-robot"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
py4j = "^0.10.9"
oaklib = "^0.1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
